<resources>
    <!-- Nombres App -->
    <string name="app_name">E-Personas</string>
    <string name="app_name_registro">Registro</string>
    <string name="app_name_main">Encuestas</string>
    <string name="app_name_actualizar">Actualizar</string>
    <string name="app_name_historial">Encuestas realizadas</string>

    <!--Titulos APP-->
    <string name="text_app_slogan">Jalando Parejo</string>

    <!--ID's API's-->
    <string name="facebook_app_id">677251319099763</string>
    <string name="googlemaps_app_id">AIzaSyAPc2NUmT4-HuEGb6wlpLza6gsfNJ6q2oo</string>

    <!--Menus-->
    <string name="action_user_information">Mi información</string>
    <string name="action_user_encuestas_terminadas">Encuestas enviadas</string>
    <string name="action_close">Logout</string>

    <!-- AlertDialog-->
    <string name="text_espera_message_load">Espera por favor...</string>

    <!--Inicio-->
    <string name="text_inicio_comencemos">Comencemos</string>
    <string name="btn_inicio_ir_login">Iniciar con Login</string>

    <!--Login-->
    <string name="text_login_subtitle">Plataforma de co-creación</string>
    <string name="text_btn_login_ingresar">Ingresar</string>
    <string name="text_hint_login_usuario">email@mail.com</string>
    <string name="text_hint_login_password">Contraseña</string>
    <string name="text_btn_login_registrar">Registrate...</string>
    <string name="action_sign_in_short">Sign in</string>

    <!--Main-->
    <string name="text_main_continuar">Continuar</string>
    <string name="text_main_instrucciones_marker">Si la posición encontrada no es correcta manten presionada la pantalla para crear un marcador y arrastralo hasta tu posición.</string>
    <string name="text_rb_main_bandera_false">Deshabilitado</string>
    <string name="text_rb_main_bandera_true">Habilitado</string>

    <!--Registro-->
    <string name="text_registro_title">Registrate...</string>
    <string name="text_registro_nombre">Nombre</string>
    <string name="text_registro_apellidos">Apellidos</string>
    <string name="text_registro_telefono">Teléfono celular</string>
    <string name="text_registro_email">Correo electrónico</string>
    <string name="text_registro_password">Contraseña</string>
    <string name="text_registro_password_confirm">Confirma contraseña</string>
    <string name="text_registro_password_hint">******</string>
    <string name="text_registro_fecha_nacimiento">0000/00/00</string>
    <string name="text_registro_date_picker">Abrir calendario</string>
    <string name="text_rb_registro_genero_m">Hombre</string>
    <string name="text_rb_registro_genero_f">Mujer</string>
    <string name="text_btn_registro_crear_usuario">Crear Perfil</string>

    <!--Actualizacion de datos-->
    <string name="text_actualizar_title">Actualiza tus datos...</string>
    <string name="text_btn_actualizar_usuario">Actualiza</string>

    <!-- Encuesta-->
    <string name="text_encuesta_titulo_colonia_Segura">Colonia Segura</string>
    <string name="text_encuesta_titulo_induccion_obra">Inducción de Obra</string>
    <string name="text_encuesta_titulo_lotes_baldios">Lotes Baldíos</string>
    <string name="text_encuesta_titulo_sondeo_alameda">Sondeo Alameda</string>

    <string name="text_encuesta_comentarios">Comentarios</string>

    <string name="text_encuesta_colonia_segura_question1">1.- ¿Que opinión tienes de las acciones de la Policía Municipal en tu Colonia?</string>
    <string name="text_encuesta_colonia_segura_question2">2.- ¿Le gustaría que la Policía Municipal realizara patrullajes con mayor frecuencia en su Colonia?</string>
    <string name="text_encuesta_colonia_segura_question3">3.- ¿En que horario estima que debe realiarse el patrullaje en su colonia? Por ...</string>
    <string name="text_encuesta_colonia_segura_question4">4.- ¿Como considera las acciones de Municipio en su Colonia?</string>
    <string name="text_encuesta_colonia_segura_question5">5.- ¿Tiene algún Tramite pendiente con la Administración Municipal?</string>
    <string name="text_encuesta_colonia_segura_question6">6.- ¿Como concideras que a sido el Gobierno de Marcos Aguilar?</string>
    <string name="text_encuesta_colonia_segura_question7">7.- ¿Que esperas de Marcos Aguilar?</string>
    <string name="text_encuesta_colonia_segura_question8">8.- ¿Practica o tiene conocidos que practiquen algún deporte dentro de su Colonia?</string>
    <string name="text_encuesta_colonia_segura_question9">9.- ¿Cual es la Principal necesidad en tu Colonia?</string>

    <string name="text_encuesta_induccion_obra_question1">1.- ¿Qué opinión tiene de que se realice la Obra?</string>
    <string name="text_encuesta_induccion_obra_question2">2.- ¿En que considera que existe mayor riesgo en seguridad y accidentes viales? Por ...</string>
    <string name="text_encuesta_induccion_obra_question3">3.- ¿Cuales son los temas de riesgo que percibe dentro y fuera del fraccionamiento?</string>

    <string name="text_encuesta_lotes_baldios_question1">1.- ¿En su Colonia hay lotes Baldíos?</string>
    <string name="text_encuesta_lotes_baldios_question2">2.- ¿Los Considera de riesgo?</string>
    <string name="text_encuesta_lotes_baldios_question3">3.- ¿Usted cre que deben atenderse?</string>
    <string name="text_encuesta_lotes_baldios_question4">4.- ¿Sabe si el Municipio ha realizado\n limpieza en los lotes?</string>
    <string name="text_encuesta_lotes_baldios_question5">5.- ¿Como considera que es la intervencion del Municipio en el desmalezado de lotes?</string>

    <string name="text_encuesta_sondeo_alameda_question1">1.- ¿Le gusta la apariencia que guarda\n actualmente la alameda?</string>
    <string name="text_encuesta_sondeo_alameda_question2">2.- ¿Usted se siente seguro al transitar\n por la zona de la alameda?</string>
    <string name="text_encuesta_sondeo_alameda_question3">3.- ¿Le gustaría que la alameda fuera\n un lugar para el recreo y el esparcimiento\n de los niños y las familias?</string>
    <string name="text_encuesta_sondeo_alameda_question4">4.- ¿Cual considera el principal problema de la\n alameda?</string>
    <string name="text_encuesta_sondeo_alameda_question5">5.- ¿Que haría usted para mejorar la imagen de la\n alameda?</string>
    <string name="text_encuesta_sondeo_alameda_question6">6.- ¿Quiere recibir los Resultados?</string>

        <!--Respuestas-->
        <string name="respuesta1">Muy Buena</string>
        <string name="respuesta2">Buena</string>
        <string name="respuesta3">Regular</string>
        <string name="respuesta4">Mala</string>
        <string name="respuesta5">La Mañana</string>
        <string name="respuesta6">El Medio Día</string>
        <string name="respuesta7">La Tarde</string>
        <string name="respuesta8">La Noche</string>
        <string name="respuesta9">Cercania con la gente</string>
        <string name="respuesta10">Información Oportuna de las acciones</string>
        <string name="respuesta11">Mas Seguridad</string>
        <string name="respuesta12">Obra Publica y Servicios</string>
        <string name="respuesta13">Cuentas Claras</string>
        <string name="respuesta14">Captura el nombre de la obra</string>
        <string name="respuesta15">Inseguridad</string>
        <string name="respuesta16">Inundación</string>
        <string name="respuesta17">Accidentes</string>
        <string name="respuesta18">Cruce de Peatones</string>
        <string name="respuesta19">Otro?</string>
        <string name="respuesta20">Capture el tipo de riesgo</string>
        <string name="respuesta21">La Inseguridad</string>
        <string name="respuesta22">El Ambulantaje</string>
        <string name="respuesta23">La Moviliadad</string>

    <!--Alert Informacion complementaria-->
    <string name="text_hint_alert_encuesta_numero">4425555555</string>
    <string name="text_hint_alert_encuesta_email">ejemplo@hotmail.com</string>
    <string name="text_hint_alert_encuesta_facebook">Usuario de facebook</string>
    <string name="text_hint_alert_encuesta_twitter">Usuario de twitter: @usuario</string>
    <string name="text_rb_alert_encuesta_genero_m">Hombre</string>
    <string name="text_rb_alert_encuesta_genero_f">Mujer</string>
    <string name="text_hint_alert_encuesta_edad_aprox">Edad aprox.</string>
    <string name="text_hint_alert_encuesta_otro">Otro</string>

    <string name="text_lbl_alert_encuesta_telefono">Teléfono</string>
    <string name="text_lbl_alert_encuesta_correo">Correo</string>
    <string name="text_lbl_alert_encuesta_facebook">Facebook</string>
    <string name="text_lbl_alert_encuesta_twitter">Twitter</string>
    <string name="text_lbl_alert_encuesta_foto">Foto de identificación</string>

    <!--Información complementaria-->
    <string name="text_dialog_title">Información Complementaria</string>

    <!--URL-->
    <string name="url">http://ivnacostavargas.xyz/ws/</string>

    <string name="text_guion">-</string>

    <!-- Mensajes de error-->
    <string name="text_title_error">Error</string>
    <string name="text_title_error_advertencia">Advertencia</string>
    <string name="text_title_success">Felicidades</string>

    <string name="text_inicio_activity_cancelar_sesion">Cancelaste inicio de sesion.</string>
    <string name="text_inicio_activity_error_sesion">Error al iniciar sesion.</string>
    <string name="text_inicio_activity_error_cuenta_no_valida">No se pudo iniciar sesion con esta cuenta de facebook.</string>
    <string name="text_error_wifi">No cuentas con señal wifi o datos móviles</string>
    <string name="text_error_actualizar_usuario">Error al actualizar usuario, por favor vuelve a intentarlo.</string>
    <string name="text_main_activity_toast_error_gps">No podemos encontrar tu posición, por favor usa el marcador o presiona el boton para encontrar tu posición.</string>
    <string name="text_actualizar_usuario">Datos actualizados correctamente!</string>
    <string name="text_actualizar_usuario_error">No pudimos actualizar tus datos!</string>
    <string name="text_actualizar_usuario_error_server">Error al intentar conectar con el servidor.</string>

</resources>
