<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin_very_small">
        <TextView
            android:id="@+id/textTitleInduccionObra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_encuesta_titulo_induccion_obra"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:textColor="@color/color_black"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/hard_hat"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textTitleInduccionObra"
            android:layout_toStartOf="@+id/textTitleInduccionObra"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_induccion_obra_question1"
        android:textColor="@color/color_black"/>
    <EditText
        android:id="@+id/pregunta1_respuesta1_induccion_obra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin_very_small"
        android:background="@drawable/shape_round"
        android:hint="@string/respuesta14"/>
    <RadioGroup
        android:id="@+id/Obrapreunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/pregunta1_respuesta2_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/pregunta1_respuesta3_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2"/>
        <RadioButton
            android:id="@+id/pregunta1_respuesta4_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3"/>
        <RadioButton
            android:id="@+id/pregunta1_respuesta5_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_induccion_obra_question2"
        android:textColor="@color/color_black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <CheckBox
                android:id="@+id/pregunta2_respuesta1_induccion_obra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta5"
                android:layout_marginRight="@dimen/separate_radios"/>
            <CheckBox
                android:id="@+id/pregunta2_respuesta2_induccion_obra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta6"
                android:layout_toRightOf="@+id/pregunta2_respuesta1_induccion_obra" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <CheckBox
                android:id="@+id/pregunta2_respuesta3_induccion_obra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta7"
                android:layout_marginRight="@dimen/separate_radios"/>
            <CheckBox
                android:id="@+id/pregunta2_respuesta4_induccion_obra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta8"
                android:layout_toRightOf="@+id/pregunta2_respuesta3_induccion_obra" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_induccion_obra_question3"
        android:textColor="@color/color_black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:id="@+id/pregunta3_respuesta1_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta15"/>
        <CheckBox
            android:id="@+id/pregunta3_respuesta2_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta16"/>
        <CheckBox
            android:id="@+id/pregunta3_respuesta3_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta17"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:id="@+id/pregunta3_respuesta4_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta18"/>
        <CheckBox
            android:id="@+id/pregunta3_respuesta5_induccion_obra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta19"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Especifique:"
        android:textColor="@color/color_black"/>
    <EditText
        android:id="@+id/pregunta3_respuesta6_induccion_obra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round"
        android:hint="@string/respuesta20"
        android:layout_margin="@dimen/vertical_margin_very_small"/>
</LinearLayout>