<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin_very_small">
        <TextView
            android:id="@+id/textTitleColoniaSegura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_encuesta_titulo_colonia_Segura"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:textColor="@color/color_black"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/seguridad"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textTitleColoniaSegura"
            android:layout_toStartOf="@+id/textTitleColoniaSegura"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_colonia_segura_question1"
        android:textColor="@color/color_black"/>
    <RadioGroup
        android:id="@+id/preunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/pregunta1_respuesta1_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/pregunta1_respuesta2_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2"/>
        <RadioButton
            android:id="@+id/pregunta1_respuesta3_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3"/>
        <RadioButton
            android:id="@+id/pregunta1_respuesta4_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_encuesta_colonia_segura_question2"
            android:textColor="@color/color_black"
            android:layout_weight="3.6"/>
        <Switch
            android:id="@+id/pregunta2_respuesta_colonia_segura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_weight="1.4"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_colonia_segura_question3"
        android:textColor="@color/color_black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <CheckBox
                android:id="@+id/pregunta3_respuesta1_colonia_segura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta5"
                android:layout_marginRight="@dimen/separate_radios"/>
            <CheckBox
                android:id="@+id/pregunta3_respuesta2_colonia_segura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta6"
                android:layout_toRightOf="@+id/pregunta3_respuesta1_colonia_segura" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <CheckBox
                android:id="@+id/pregunta3_respuesta3_colonia_segura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta7"
                android:layout_marginRight="@dimen/separate_radios"/>
            <CheckBox
                android:id="@+id/pregunta3_respuesta4_colonia_segura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta8"
                android:layout_toRightOf="@+id/pregunta3_respuesta3_colonia_segura" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_colonia_segura_question4"
        android:textColor="@color/color_black"/>
    <RadioGroup
        android:id="@+id/preunta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/pregunta4_respuesta1_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1"
            android:layout_marginRight="3dp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/pregunta4_respuesta2_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2"
            android:layout_marginRight="3dp"/>
        <RadioButton
            android:id="@+id/pregunta4_respuesta3_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3"
            android:layout_marginRight="3dp"/>
        <RadioButton
            android:id="@+id/pregunta4_respuesta4_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_encuesta_colonia_segura_question5"
            android:textColor="@color/color_black"
            android:layout_weight="3.6"/>
        <Switch
            android:id="@+id/pregunta5_respuesta1_colonia_segura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_weight="1.4"/>
    </LinearLayout>
    <EditText
        android:id="@+id/pregunta5_respuesta2_colonia_segura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:layout_marginBottom="@dimen/vertical_margin_small"
        android:hint="@string/text_encuesta_comentarios"
        android:gravity="center"
        android:background="@drawable/shape_round"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_colonia_segura_question6"
        android:textColor="@color/color_black"/>
    <RadioGroup
        android:id="@+id/preunta6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/pregunta6_respuesta1_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/pregunta6_respuesta2_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2"/>
        <RadioButton
            android:id="@+id/pregunta6_respuesta3_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3"/>
        <RadioButton
            android:id="@+id/pregunta6_respuesta4_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_colonia_segura_question7"
        android:textColor="@color/color_black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/vertical_margin_very_small">
        <CheckBox
            android:id="@+id/pregunta7_respuesta1_colonia_segura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta9"/>
        <CheckBox
            android:id="@+id/pregunta7_respuesta2_colonia_segura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta10"/>
        <CheckBox
            android:id="@+id/pregunta7_respuesta3_colonia_segura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta11"/>
        <CheckBox
            android:id="@+id/pregunta7_respuesta4_colonia_segura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta12"/>
        <CheckBox
            android:id="@+id/pregunta7_respuesta5_colonia_segura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta13"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.6"
            android:text="@string/text_encuesta_colonia_segura_question8"
            android:textColor="@color/color_black"/>
        <Switch
            android:id="@+id/pregunta8_respuesta1_colonia_segura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"/>
    </LinearLayout>
    <EditText
        android:id="@+id/pregunta8_respuesta2_colonia_segura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:layout_marginBottom="@dimen/vertical_margin_small"
        android:hint="@string/text_encuesta_comentarios"
        android:gravity="center"
        android:background="@drawable/shape_round"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_very_small"
        android:layout_height="0.3dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_encuesta_colonia_segura_question9"
        android:textColor="@color/color_black"/>

    <EditText
        android:id="@+id/pregunta9_respuesta_colonia_segura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:layout_marginBottom="@dimen/vertical_margin_small"
        android:hint="@string/text_encuesta_comentarios"
        android:gravity="center"
        android:background="@drawable/shape_round"/>
</LinearLayout>