<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pgutierrezd.becaidspractica.MainActivity">

    <item
        android:id="@+id/action_user_share"
        android:orderInCategory="100"
        android:title=""
        android:icon="@drawable/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_user_information"
        android:orderInCategory="100"
        android:title="@string/action_user_information"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_user_encuestas"
        android:orderInCategory="100"
        android:title="@string/action_user_encuestas_terminadas"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="never" />
</menu>
